--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,29 @@
 @import "tailwindcss";
 
 @theme {
-    --animate-wave: wave 8s ease-in-out infinite;
+    --animate-waveLg: waveLg 7s ease infinite;
 
-    @keyframes wave {
-
+    @keyframes waveLg {
         0%,
         100% {
-            clip-path: polygon(0 85%, 10% 88%, 25% 90%, 39% 89%, 52% 83%, 66% 81%, 82% 82%, 92% 84%, 100% 90%, 100% 0, 0 0);
+           clip-path: polygon(0% 87%, 4% 90%, 9% 91%, 14% 91%, 19% 90%, 23% 89%, 27% 87%, 31% 85%, 36% 84%, 40% 83%, 44% 84%, 49% 86%, 53% 86%, 56% 88%, 60% 89%, 64% 90%, 68% 91%, 72% 91%, 78% 91%, 82% 90%, 87% 89%, 90% 87%, 92% 86%, 96% 83%, 100% 82%, 100% 0, 0 0);
         }
 
         50% {
-           clip-path: polygon(0 86%, 12% 81%, 25% 79%, 42% 81%, 55% 85%, 68% 89%, 80% 90%, 92% 84%, 100% 83%, 100% 0, 0 0);
+           clip-path: polygon(0% 87%, 4% 85%, 9% 83%, 15% 82%, 20% 81%, 24% 83%, 27% 84%, 31% 87%, 36% 89%, 41% 91%, 45% 92%, 50% 93%, 53% 93%, 57% 93%, 60% 92%, 63% 90%, 66% 89%, 71% 87%, 76% 85%, 82% 84%, 85% 83%, 89% 83%, 92% 85%, 95% 86%, 100% 89%, 100% 0, 0 0);
+        }
+    }
+
+    --animate-waveSm: waveSm 7s ease infinite;
+
+    @keyframes waveSm {
+        0%,
+        100% {
+           clip-path: polygon(0% 88%, 8% 91%, 17% 92%, 25% 90%, 32% 88%, 40% 87%, 48% 88%, 55% 90%, 63% 92%, 71% 92%, 78% 92%, 86% 91%, 92% 89%, 100% 87%, 100% 0%, 0% 0%);
+        }
+
+        50% {
+          clip-path: polygon(0 93%, 8% 90%, 14% 88%, 23% 87%, 31% 89%, 39% 91%, 47% 92%, 55% 93%, 63% 92%, 70% 90%, 78% 89%, 86% 88%, 93% 88%, 100% 90%, 100% 0%, 0% 0%);
         }
     }
 }
