--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&display=swap');
+
 
 @theme {
+    --font-heading: "Space Grotesk", sans-serif;
+    --font-content: "Atkinson Hyperlegible Mono", sans-serif;
+
     --animate-waveLg: waveLg 7s ease infinite, fadeInLg 0.8s ease forwards;
 
     @keyframes waveLg {
