--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
         }
     }
 
-    --animate-waveSm: waveSm 6s ease infinite, fadeInSm 0.7s ease forwards;
+    --animate-waveSm: waveSm 4s ease infinite, fadeInSm 0.7s ease forwards;
 
     @keyframes waveSm {
         0%,
@@ -78,6 +78,18 @@
 
         100% {
             padding-top:30rem;
+        }
+    }
+
+    --animate-canvasFadeIn: canvasFadeIn 0.6s ease forwards;
+
+    @keyframes canvasFadeIn {
+        0% {
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 100;
         }
     }
 }
