--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&display=swap');
 
+:root {
+    --clr-1: "#2575FC";
+    --clr-2: "#6A11CB";
+    --clr-3: "#FF7EB3";
+    /* --clr-4: "";
+    --clr-5: "";
+    --clr-6: ""; */
+}
+
 @layer utilities {
     .hide-scrollbar::-webkit-scrollbar {
         display: none;
