--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Parisienne&display=swap');
 
 @layer utilities {
     .hide-scrollbar::-webkit-scrollbar {
@@ -19,6 +20,7 @@
 @theme {
     --font-heading: "Space Grotesk", sans-serif;
     --font-content: "Atkinson Hyperlegible Mono", sans-serif;
+    --font-footer: "Atkinson Hyperlegible Mono", sans-serif;
     --animate-waveLg: waveLg 6s ease infinite, fadeInLg 0.8s ease forwards;
 
     @keyframes waveLg {
