--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Parisienne&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tagesschrift&display=swap');
+
 @import "tailwindcss";
 
 @layer utilities {
@@ -19,8 +24,8 @@
 
 @theme {
     --font-heading: "Space Grotesk", sans-serif;
-    --font-content: "Atkinson Hyperlegible Mono", sans-serif;
-    --font-footer: "Atkinson Hyperlegible Mono", sans-serif;
+    --font-content: "Funnel Sans", sans-serif;
+    --font-footer: "Tagesschrift", system-ui;
     --animate-waveLg: waveLg 6s ease infinite, fadeInLg 0.8s ease forwards;
 
     @keyframes waveLg {
