Chnage waves for mobile screens

--- a/src/index.css
+++ b/src/index.css
@@ -44,11 +44,11 @@
     @keyframes waveSm {
         0%,
         100% {
-           clip-path: polygon(0% 88%, 8% 91%, 17% 92%, 25% 90%, 32% 88%, 40% 87%, 48% 88%, 55% 90%, 63% 92%, 71% 92%, 78% 92%, 86% 91%, 92% 89%, 100% 87%, 100% 0%, 0% 0%);
+          clip-path: polygon(0 90%, 11% 92%, 21% 91%, 34% 88%, 45% 88%, 58% 91%, 70% 91%, 83% 88%, 92% 86%, 100% 84%, 100% 0, 0% 0%);
         }
 
         50% {
-          clip-path: polygon(0 93%, 8% 90%, 14% 88%, 23% 87%, 31% 89%, 39% 91%, 47% 92%, 55% 93%, 63% 92%, 70% 90%, 78% 89%, 86% 88%, 93% 88%, 100% 90%, 100% 0%, 0% 0%);
+         clip-path: polygon(0 87%, 9% 87%, 22% 87%, 33% 89%, 45% 91%, 57% 89%, 70% 87%, 80% 86%, 90% 87%, 100% 88%, 100% 0, 0% 0%);
         }
     }
 
